--- a/source/sass/blocks/main-content.scss
+++ b/source/sass/blocks/main-content.scss
@@ -1,3 +1,7 @@
+.main-content--none {
+  display: none;
+}
+
 @media only screen and (min-width: 1440px) {
   .main-content {
     background-image: url("../img/line-main.svg");
