--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -44,6 +44,7 @@
   color: rgba(255, 34, 114, 1);
 
   &::placeholder {
+			font-family: "Muller", "Arial", sans-serif;
     font-size: 12px;
     color: rgba(163, 163, 163, 1);
   }
