--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -5,7 +5,7 @@
 
 .social__link {
   margin-right: 20px;
-  cursor: url("../img/icon-cursor.svg"), pointer;
+  cursor: url('../img/icon-cursor.svg'), pointer;
 
   &:hover {
     opacity: 0.7;
